--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,8 +1,12 @@
 ---
-title: GO0DMAN Innovation Shop
+title: Innovation Items Collection
 layout: collection
 permalink: /
 collection: projects
 entries_layout: grid
 classes: wide
+header:
+  image: /asset/images/header.jpg
 ---
+
+In the following you can find all the innovation items available in the GO0DMAN Project
