--- a/_pages/index.html
+++ b/_pages/index.html
@@ -6,7 +6,8 @@ collection: projects
 entries_layout: grid
 classes: wide
 header:
-  image: /asset/images/header.jpg
+  image: /assets/images/header.jpg
 ---
 
 In the following you can find all the innovation items available in the GO0DMAN Project
+
